{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 20,
  "lineage": "5ffb9559-b5cd-f74e-8271-49d8a7d70e6c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nodejs_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0651ff04b9b983c9f",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-07cb79a96019101ae",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07cb79a96019101ae",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eng74.filipe.aws.key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d533472f719a916e",
            "private_dns": "ip-12-0-1-171.eu-west-1.compute.internal",
            "private_ip": "12.0.1.171",
            "public_ip": "54.72.100.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07d08ba45eee934b4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-077120b5c2f4150c4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bed35ed561641da0",
            "tags": {
              "Name": "Filipe_eng74_webapp_terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-077120b5c2f4150c4"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_app",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc-terraform-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-0547ad535625290db",
            "id": "igw-0547ad535625290db",
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng74_filipe_igw_terraform"
            },
            "vpc_id": "vpc-053944e9ee3b125bd"
          },
          "dependencies": [
            "aws_vpc.vpc-terraform-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-09437c817286fe4a8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09437c817286fe4a8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 500,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "85.240.168.69/32",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 400,
                "to_port": 22
              }
            ],
            "owner_id": "135928476890",
            "subnet_ids": [
              "subnet-0bed35ed561641da0"
            ],
            "tags": {
              "Name": "eng74_filipe_NACL_app_terraform"
            },
            "vpc_id": "vpc-053944e9ee3b125bd"
          },
          "dependencies": [
            "aws_subnet.subnet-public",
            "aws_vpc.vpc-terraform-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_public_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f0ffb89319827d90",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0547ad535625290db",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eng74_filipe_route_table_terraform"
            },
            "vpc_id": "vpc-053944e9ee3b125bd"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc-terraform-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_public_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040b1f854e2f33c50",
            "route_table_id": "rtb-0f0ffb89319827d90",
            "subnet_id": "subnet-0bed35ed561641da0"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.route_public_table",
            "aws_subnet.subnet-public",
            "aws_vpc.vpc-terraform-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-077120b5c2f4150c4",
            "description": "allows traffic to app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077120b5c2f4150c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "85.240.168.69/32"
                ],
                "description": "Port 3000 for my ip",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "85.240.168.69/32"
                ],
                "description": "port 22 from my ip",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public_sg_for_app_Filipe",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eng74_filipe_sg_app_terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-053944e9ee3b125bd"
          },
          "dependencies": [
            "aws_vpc.vpc-terraform-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0bed35ed561641da0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "12.0.1.0/24",
            "id": "subnet-0bed35ed561641da0",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng74_filipe_subnet_public_terraform"
            },
            "vpc_id": "vpc-053944e9ee3b125bd"
          },
          "dependencies": [
            "aws_vpc.vpc-terraform-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-terraform-name",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-053944e9ee3b125bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-0f094cc51ba2123e0",
            "default_route_table_id": "rtb-0fc9e11b09954b216",
            "default_security_group_id": "sg-0960ca26a46b0b721",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-053944e9ee3b125bd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fc9e11b09954b216",
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng74_filipe_vpc_terraform"
            }
          }
        }
      ]
    }
  ]
}